# ibx-rs

./: Cargo.toml  pyproject.toml
bench/: bench_harness.rs
notebooks/: basics.ipynb
src/: bridge.rs  client_core.rs  config.rs  gateway.rs  types.rs
src/api/: client.rs  types.rs
src/api/client/: account.rs  dispatch.rs  market_data.rs  mod.rs  orders.rs  reference.rs  tests.rs
src/auth/: session.rs
src/control/: contracts.rs  histogram.rs  news.rs
src/engine/: hot_loop.rs
src/engine/hot_loop/: ccp.rs  farm.rs  hmds.rs  mod.rs
src/protocol/: connection.rs  fix.rs  tick_decoder.rs
src/python/compat/: client.rs  contract.rs
src/python/compat/client/: account.rs  dispatch.rs  market_data.rs  mod.rs  orders.rs  reference.rs  stubs.rs  test_helpers.rs
tests/: depth_wire_test.rs  rust_api_gt.rs  scenarios.rs
tests/ib_paper_compat/: account.rs  common.rs  connection.rs  contracts.rs  error_handling.rs  heartbeat.rs  historical.rs  main.rs  market_data.rs  multi_asset.rs  orders.rs
tests/python/: test_issue_97.py  test_live_depth.py
